--- a/new-projeto/src/style.css
+++ b/new-projeto/src/style.css
@@ -1,16 +1,38 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
+  padding: 10px;
+  /* margin: 10px; */
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: #f8f7f7;
+  padding: 20px;
+  text-align: center;
+  border: 1px solid #080808;
+}
+
+.header h1 {
+  color: #333;
+  font-size: 24px;
+}
+.header a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
 h1 {
   color: #333;
-  border: 1px solid #080808;
   width: 40%;
   text-align: center;
   border-radius: 10px;
