--- a/new-projeto/src/style.css
+++ b/new-projeto/src/style.css
@@ -13,46 +13,60 @@ body {
 .header {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 60px;
   background-color: #f8f7f7;
   padding: 20px;
+  margin-bottom: 20px;
   text-align: center;
   border: 1px solid #080808;
+  border-radius: 10px;
 }
 
 .header h1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: #333;
-  font-size: 24px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 2rem;
 }
-.header a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
-h1 {
-  color: #333;
-  width: 40%;
-  text-align: center;
-  border-radius: 10px;
+
+h2{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center;
+  align-items: center; */
+  text-align: right;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1.5rem;
+  padding-right: 30px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
-
 }
   
 th, td {
   border: 1px solid #080808;
   padding: 8px;
   text-align: left;
-  
 }
 
 th {
   text-align: center;
   background-color: #f8f7f7;
+}
+td {
+  font-weight: bold;
+  font-style: italic;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1rem;
+  text-align: right;
+  background-color: #f0f0f0;
 }
