--- a/bk-ft-ts/frontend/style.css
+++ b/bk-ft-ts/frontend/style.css
@@ -17,7 +17,6 @@ html {
 main{
   width: 100%;
   height: 100%;
-  padding-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,18 +32,81 @@ main{
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
+header {
+  width: 100%;
+  background-color: #4967d4;
+  color: white;
+  padding: 10px 0;
+
+  nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    ul{
+      display: flex;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      li{
+        border-bottom: 0px;
+        margin: 0 15px;
+        font-size: 18px;
+        font-weight: bold;
+        transition: color 0.3s;
+
+        a{
+          color: white;
+          text-decoration: none;
+          font-weight: bold;
+          transition: color 0.3s;
+          &:hover {
+            color: #ddd;
+          }
+        }
+      }
+    }
+  }      
+}
+
+section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
 h1 {
   text-align: center;
-  margin-bottom: 20px;
 }
 
 #btn-carregar {
   padding: 10px 20px;
-  background-color: #28a745;
+  background-color: #4967d4;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+#btn-carregar-carros{
+  padding: 10px 20px;
+  background-color: #308a3a;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#lista-usuarios, #lista-carros {
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
 }
 
 li{
@@ -52,3 +114,7 @@ li{
   padding: 10px;
   border-bottom: 1px solid #ddd;
 }
+
+
+
+
