--- a/estoque/frontend/css/styles.css
+++ b/estoque/frontend/css/styles.css
@@ -24,11 +24,27 @@ body {
     color: #fafafa;
 }
 
+.navbar-collapse{
+    justify-content: flex-end;
+    align-items: center;
+    font-family: "alegreya-sans", sans-serif;
+}
+
 .navbar-brand{
     font-weight: 700;
     font-size: 1.5rem;
     color: #fafafa;
     margin-right: 20px;
+}
+
+.navbar-brand:hover{
+    color: #fafafa;
+}
+
+
+a:active{
+    text-decoration: none;
+    color: #fafafa;
 }
 
 .nav-item{
@@ -81,6 +97,12 @@ body {
     background-color: #fafafa;
     color: #06213b;
     font-weight: 600;
-    border: none;
+    border: 1px solid #fafafa;
+}
+
+.btn:hover{
+    background-color: #06213b;
+    color: #fafafa;
+    border: 1px solid #fafafa;
 }
 
