--- a/estoque-projeto/frontend/style/style.css
+++ b/estoque-projeto/frontend/style/style.css
@@ -14,6 +14,12 @@ h1{
   color: #333;
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+} 
+
 .form {
   margin-bottom: 20px;
 }
